feature: finish the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,14 @@
   "files.associations": {
     "pages.json": "jsonc", // pages.json 可以写注释
     "manifest.json": "jsonc" // manifest.json 可以写注释
-  }
+  },
+  "cSpell.words": [
+    "composables",
+    "dcloudio",
+    "miniapp",
+    "refresherrefresh",
+    "scrolltolower",
+    "skus",
+    "uniapp"
+  ]
 }
